force-app/main/default/objects/Retail_Advance_Receipt__c/Retail_Advance_Receipt__c.object-meta.xml
<CustomObject>
    <label>Retail Advance Receipt</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Advance Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>