force-app/main/default/objects/Retail_Advance_Receipt__c/fields/Advance_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment_Date__c</fullName>
    <label>Advance Payment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>