force-app/main/default/objects/Retail_Advance_Receipt__c/fields/Advance_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Advance_Receipt__c</fullName>
    <label>Advance Receipt</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>